Normalize account entries when description is missing in import CSV file