@@ -4,7 +4,9 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class MonefyImporter {
 
@@ -16,25 +18,38 @@ public class MonefyImporter {
       var records = Files.readAllLines(Paths.get(path))
           .stream()
           .map(line -> Arrays.asList(line.split(DELIMITER)))
-          .toList();
+          .collect(Collectors.toList());
 
-      return sanitizeMonefyImportData(records);
+      return normalizeMonefyImportData(records);
     } catch (IOException e) {
       throw new RuntimeException("Import of %name failed.".formatted(path), e);
     }
   }
 
-  private List<List<String>> sanitizeMonefyImportData(List<List<String>> rawImportData) {
+  private List<List<String>> normalizeMonefyImportData(List<List<String>> rawImportData) {
     if (rawImportData.isEmpty()) {
       return rawImportData;
     }
 
-    var header = rawImportData.get(0);
-    if (!header.isEmpty()) {
-      var firstHeader = header.get(0);
-      header.set(0, removeUTF8BOM(firstHeader));
+    var headers = rawImportData.get(0);
+    if (!headers.isEmpty()) {
+      var firstHeader = headers.get(0);
+      headers.set(0, removeUTF8BOM(firstHeader));
     }
-    return rawImportData;
+
+    if (rawImportData.size() == 1) {
+      return rawImportData;
+    }
+
+    return rawImportData.stream().map(dataRow -> {
+      var hasDescriptionCellMissing = dataRow.size() == headers.size() - 1;
+      if (!hasDescriptionCellMissing) {
+        return dataRow;
+      }
+      var normalizedRow = new LinkedList<>(dataRow);
+      normalizedRow.add("");
+      return normalizedRow;
+    }).toList();
   }
 
   private String removeUTF8BOM(String s) {
